fix(warnings): resolve Java compilation warnings
Replace deprecated Thread.getId() with threadId() in WitInterfaceBenchmark
- Thread.getId() deprecated in Java 19+
- Use Thread.currentThread().threadId() instead

Add generic type parameter to Linker in WastTestRunner
- Change raw type Linker to Linker<?> to eliminate unchecked warnings

All actionable Java compilation warnings now resolved.